--- a/packages/analytics-server/package.json
+++ b/packages/analytics-server/package.json
@@ -12,6 +12,7 @@
     "apollo-server-core": "^3.9.0",
     "apollo-server-express": "^3.9.0",
     "express": "^4.18.1",
-    "graphql": "^16.5.0"
+    "graphql": "^16.5.0",
+    "mongoose": "^6.4.3"
   }
 }
