--- a/packages/analytics-server/package.json
+++ b/packages/analytics-server/package.json
@@ -9,10 +9,14 @@
     "start": "ts-node index.ts"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "apollo-server-core": "^3.9.0",
     "apollo-server-express": "^3.9.0",
+    "bcrypt": "^5.0.1",
     "express": "^4.18.1",
     "graphql": "^16.5.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.3"
   }
 }
